dat/NHdump.css
/* CSS - only required for HTML DumpLogs */
body {
  color: #CCCCCC;
  background-color: #222222;
  font-family: monospace;
  font-size: 0.9vw;
}

/* Map display area */
pre.nh_screen {
  font-family: DejaVu Sans Mono, Consolas, Menlo, Courier New, Courier, monospace;
  font-size: 1.05vw;
  background-color: black;
  width: fit-content;
  padding: 0.5em;
  border-radius: 4px;
}

/* Inventory item letter spacing */
.nh_item_letter {
  padding-left: 3ex;
}

/* Tooltip container - map cell descriptions */
.tooltip {
  position: relative;
  display: inline-block;
}

/* Tooltip text styling */
.tooltip .tooltiptext {
  visibility: hidden;
  background-color: #333;
  color: #fff;
  text-align: center;
  font-size: 0.9vw;
  padding: 5px 5px;
  border-radius: 6px;
  border: 1px solid #555;
  white-space: nowrap;
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  margin-top: 2px;
}

/* Show the tooltip text when you mouse over or focus the tooltip container */
.tooltip:hover .tooltiptext,
.tooltip:focus-within .tooltiptext {
  visibility: visible;
}

h2 {
  color: white;
  font-size: 1.06vw;
  margin: 0.5ex;
  padding-top: 1.5em;
}

h3 {
  color: white;
  font-size: 0.95vw;
  margin: 1ex 0ex 0.25ex 1.5ex;
}

blockquote {
  margin-top: 0px;
}

/* Map row container */
span.nh_screen {
  background-color: black;
}

/* NetHack color palette */
.nh_color_0 { color: #555555; }  /* CLR_BLACK          */
.nh_color_1 { color: #AA0000; }  /* CLR_RED            */
.nh_color_2 { color: #00AA00; }  /* CLR_GREEN          */
.nh_color_3 { color: #AA5500; }  /* CLR_BROWN          */
.nh_color_4 { color: #0000AA; }  /* CLR_BLUE           */
.nh_color_5 { color: #AA00AA; }  /* CLR_MAGENTA        */
.nh_color_6 { color: #00AAAA; }  /* CLR_CYAN           */
.nh_color_7 { color: #AAAAAA; }  /* CLR_GRAY           */
.nh_color_8 { color: #555555; }  /* NO_COLOR           */
.nh_color_9 { color: #FF5555; }  /* CLR_ORANGE         */
.nh_color_10 { color: #55FF55; } /* CLR_BRIGHT_GREEN   */
.nh_color_11 { color: #FFFF55; } /* CLR_YELLOW         */
.nh_color_12 { color: #5555FF; } /* CLR_BRIGHT_BLUE    */
.nh_color_13 { color: #FF55FF; } /* CLR_BRIGHT_MAGENTA */
.nh_color_14 { color: #55FFFF; } /* CLR_BRIGHT_CYAN    */
.nh_color_15 { color: #FCFCFC; } /* CLR_WHITE          */

/* Inverse (highlighted) color variants */
.nh_inv_0 { color: black; background-color: #555555; }  /* CLR_BLACK          */
.nh_inv_1 { color: black; background-color: #AA0000; }  /* CLR_RED            */
.nh_inv_2 { color: black; background-color: #00AA00; }  /* CLR_GREEN          */
.nh_inv_3 { color: black; background-color: #AA5500; }  /* CLR_BROWN          */
.nh_inv_4 { color: black; background-color: #0000AA; }  /* CLR_BLUE           */
.nh_inv_5 { color: black; background-color: #AA00AA; }  /* CLR_MAGENTA        */
.nh_inv_6 { color: black; background-color: #00AAAA; }  /* CLR_CYAN           */
.nh_inv_7 { color: black; background-color: #AAAAAA; }  /* CLR_GRAY           */
.nh_inv_8 { color: black; background-color: #555555; }  /* NO_COLOR           */
.nh_inv_9 { color: black; background-color: #FF5555; }  /* CLR_ORANGE         */
.nh_inv_10 { color: black; background-color: #55FF55; } /* CLR_BRIGHT_GREEN   */
.nh_inv_11 { color: black; background-color: #FFFF55; } /* CLR_YELLOW         */
.nh_inv_12 { color: black; background-color: #5555FF; } /* CLR_BRIGHT_BLUE    */
.nh_inv_13 { color: black; background-color: #FF55FF; } /* CLR_BRIGHT_MAGENTA */
.nh_inv_14 { color: black; background-color: #55FFFF; } /* CLR_BRIGHT_CYAN    */
.nh_inv_15 { color: black; background-color: #FCFCFC; } /* CLR_WHITE          */

/* Extended 256-color palette (xterm colors 16-255) */
.nh_color_16 { color: #000000; }
.nh_color_17 { color: #00005F; }
.nh_color_18 { color: #000087; }
.nh_color_19 { color: #0000AF; }
.nh_color_20 { color: #0000D7; }
.nh_color_21 { color: #0000FF; }
.nh_color_22 { color: #005F00; }
.nh_color_23 { color: #005F5F; }
.nh_color_24 { color: #005F87; }
.nh_color_25 { color: #005FAF; }
.nh_color_26 { color: #005FD7; }
.nh_color_27 { color: #005FFF; }
.nh_color_28 { color: #008700; }
.nh_color_29 { color: #00875F; }
.nh_color_30 { color: #008787; }
.nh_color_31 { color: #0087AF; }
.nh_color_32 { color: #0087D7; }
.nh_color_33 { color: #0087FF; }
.nh_color_34 { color: #00AF00; }
.nh_color_35 { color: #00AF5F; }
.nh_color_36 { color: #00AF87; }
.nh_color_37 { color: #00AFAF; }
.nh_color_38 { color: #00AFD7; }
.nh_color_39 { color: #00AFFF; }
.nh_color_40 { color: #00D700; }
.nh_color_41 { color: #00D75F; }
.nh_color_42 { color: #00D787; }
.nh_color_43 { color: #00D7AF; }
.nh_color_44 { color: #00D7D7; }
.nh_color_45 { color: #00D7FF; }
.nh_color_46 { color: #00FF00; }
.nh_color_47 { color: #00FF5F; }
.nh_color_48 { color: #00FF87; }
.nh_color_49 { color: #00FFAF; }
.nh_color_50 { color: #00FFD7; }
.nh_color_51 { color: #00FFFF; }
.nh_color_52 { color: #5F0000; }
.nh_color_53 { color: #5F005F; }
.nh_color_54 { color: #5F0087; }
.nh_color_55 { color: #5F00AF; }
.nh_color_56 { color: #5F00D7; }
.nh_color_57 { color: #5F00FF; }
.nh_color_58 { color: #5F5F00; }
.nh_color_59 { color: #5F5F5F; }
.nh_color_60 { color: #5F5F87; }
.nh_color_61 { color: #5F5FAF; }
.nh_color_62 { color: #5F5FD7; }
.nh_color_63 { color: #5F5FFF; }
.nh_color_64 { color: #5F8700; }
.nh_color_65 { color: #5F875F; }
.nh_color_66 { color: #5F8787; }
.nh_color_67 { color: #5F87AF; }
.nh_color_68 { color: #5F87D7; }
.nh_color_69 { color: #5F87FF; }
.nh_color_70 { color: #5FAF00; }
.nh_color_71 { color: #5FAF5F; }
.nh_color_72 { color: #5FAF87; }
.nh_color_73 { color: #5FAFAF; }
.nh_color_74 { color: #5FAFD7; }
.nh_color_75 { color: #5FAFFF; }
.nh_color_76 { color: #5FD700; }
.nh_color_77 { color: #5FD75F; }
.nh_color_78 { color: #5FD787; }
.nh_color_79 { color: #5FD7AF; }
.nh_color_80 { color: #5FD7D7; }
.nh_color_81 { color: #5FD7FF; }
.nh_color_82 { color: #5FFF00; }
.nh_color_83 { color: #5FFF5F; }
.nh_color_84 { color: #5FFF87; }
.nh_color_85 { color: #5FFFAF; }
.nh_color_86 { color: #5FFFD7; }
.nh_color_87 { color: #5FFFFF; }
.nh_color_88 { color: #870000; }
.nh_color_89 { color: #87005F; }
.nh_color_90 { color: #870087; }
.nh_color_91 { color: #8700AF; }
.nh_color_92 { color: #8700D7; }
.nh_color_93 { color: #8700FF; }
.nh_color_94 { color: #875F00; }
.nh_color_95 { color: #875F5F; }
.nh_color_96 { color: #875F87; }
.nh_color_97 { color: #875FAF; }
.nh_color_98 { color: #875FD7; }
.nh_color_99 { color: #875FFF; }
.nh_color_100 { color: #878700; }
.nh_color_101 { color: #87875F; }
.nh_color_102 { color: #878787; }
.nh_color_103 { color: #8787AF; }
.nh_color_104 { color: #8787D7; }
.nh_color_105 { color: #8787FF; }
.nh_color_106 { color: #87AF00; }
.nh_color_107 { color: #87AF5F; }
.nh_color_108 { color: #87AF87; }
.nh_color_109 { color: #87AFAF; }
.nh_color_110 { color: #87AFD7; }
.nh_color_111 { color: #87AFFF; }
.nh_color_112 { color: #87D700; }
.nh_color_113 { color: #87D75F; }
.nh_color_114 { color: #87D787; }
.nh_color_115 { color: #87D7AF; }
.nh_color_116 { color: #87D7D7; }
.nh_color_117 { color: #87D7FF; }
.nh_color_118 { color: #87FF00; }
.nh_color_119 { color: #87FF5F; }
.nh_color_120 { color: #87FF87; }
.nh_color_121 { color: #87FFAF; }
.nh_color_122 { color: #87FFD7; }
.nh_color_123 { color: #87FFFF; }
.nh_color_124 { color: #AF0000; }
.nh_color_125 { color: #AF005F; }
.nh_color_126 { color: #AF0087; }
.nh_color_127 { color: #AF00AF; }
.nh_color_128 { color: #AF00D7; }
.nh_color_129 { color: #AF00FF; }
.nh_color_130 { color: #AF5F00; }
.nh_color_131 { color: #AF5F5F; }
.nh_color_132 { color: #AF5F87; }
.nh_color_133 { color: #AF5FAF; }
.nh_color_134 { color: #AF5FD7; }
.nh_color_135 { color: #AF5FFF; }
.nh_color_136 { color: #AF8700; }
.nh_color_137 { color: #AF875F; }
.nh_color_138 { color: #AF8787; }
.nh_color_139 { color: #AF87AF; }
.nh_color_140 { color: #AF87D7; }
.nh_color_141 { color: #AF87FF; }
.nh_color_142 { color: #AFAF00; }
.nh_color_143 { color: #AFAF5F; }
.nh_color_144 { color: #AFAF87; }
.nh_color_145 { color: #AFAFAF; }
.nh_color_146 { color: #AFAFD7; }
.nh_color_147 { color: #AFAFFF; }
.nh_color_148 { color: #AFD700; }
.nh_color_149 { color: #AFD75F; }
.nh_color_150 { color: #AFD787; }
.nh_color_151 { color: #AFD7AF; }
.nh_color_152 { color: #AFD7D7; }
.nh_color_153 { color: #AFD7FF; }
.nh_color_154 { color: #AFFF00; }
.nh_color_155 { color: #AFFF5F; }
.nh_color_156 { color: #AFFF87; }
.nh_color_157 { color: #AFFFAF; }
.nh_color_158 { color: #AFFFD7; }
.nh_color_159 { color: #AFFFFF; }
.nh_color_160 { color: #D70000; }
.nh_color_161 { color: #D7005F; }
.nh_color_162 { color: #D70087; }
.nh_color_163 { color: #D700AF; }
.nh_color_164 { color: #D700D7; }
.nh_color_165 { color: #D700FF; }
.nh_color_166 { color: #D75F00; }
.nh_color_167 { color: #D75F5F; }
.nh_color_168 { color: #D75F87; }
.nh_color_169 { color: #D75FAF; }
.nh_color_170 { color: #D75FD7; }
.nh_color_171 { color: #D75FFF; }
.nh_color_172 { color: #D78700; }
.nh_color_173 { color: #D7875F; }
.nh_color_174 { color: #D78787; }
.nh_color_175 { color: #D787AF; }
.nh_color_176 { color: #D787D7; }
.nh_color_177 { color: #D787FF; }
.nh_color_178 { color: #D7AF00; }
.nh_color_179 { color: #D7AF5F; }
.nh_color_180 { color: #D7AF87; }
.nh_color_181 { color: #D7AFAF; }
.nh_color_182 { color: #D7AFD7; }
.nh_color_183 { color: #D7AFFF; }
.nh_color_184 { color: #D7D700; }
.nh_color_185 { color: #D7D75F; }
.nh_color_186 { color: #D7D787; }
.nh_color_187 { color: #D7D7AF; }
.nh_color_188 { color: #D7D7D7; }
.nh_color_189 { color: #D7D7FF; }
.nh_color_190 { color: #D7FF00; }
.nh_color_191 { color: #D7FF5F; }
.nh_color_192 { color: #D7FF87; }
.nh_color_193 { color: #D7FFAF; }
.nh_color_194 { color: #D7FFD7; }
.nh_color_195 { color: #D7FFFF; }
.nh_color_196 { color: #FF0000; }
.nh_color_197 { color: #FF005F; }
.nh_color_198 { color: #FF0087; }
.nh_color_199 { color: #FF00AF; }
.nh_color_200 { color: #FF00D7; }
.nh_color_201 { color: #FF00FF; }
.nh_color_202 { color: #FF5F00; }
.nh_color_203 { color: #FF5F5F; }
.nh_color_204 { color: #FF5F87; }
.nh_color_205 { color: #FF5FAF; }
.nh_color_206 { color: #FF5FD7; }
.nh_color_207 { color: #FF5FFF; }
.nh_color_208 { color: #FF8700; }
.nh_color_209 { color: #FF875F; }
.nh_color_210 { color: #FF8787; }
.nh_color_211 { color: #FF87AF; }
.nh_color_212 { color: #FF87D7; }
.nh_color_213 { color: #FF87FF; }
.nh_color_214 { color: #FFAF00; }
.nh_color_215 { color: #FFAF5F; }
.nh_color_216 { color: #FFAF87; }
.nh_color_217 { color: #FFAFAF; }
.nh_color_218 { color: #FFAFD7; }
.nh_color_219 { color: #FFAFFF; }
.nh_color_220 { color: #FFD700; }
.nh_color_221 { color: #FFD75F; }
.nh_color_222 { color: #FFD787; }
.nh_color_223 { color: #FFD7AF; }
.nh_color_224 { color: #FFD7D7; }
.nh_color_225 { color: #FFD7FF; }
.nh_color_226 { color: #FFFF00; }
.nh_color_227 { color: #FFFF5F; }
.nh_color_228 { color: #FFFF87; }
.nh_color_229 { color: #FFFFAF; }
.nh_color_230 { color: #FFFFD7; }
.nh_color_231 { color: #FFFFFF; }
.nh_color_232 { color: #080808; }
.nh_color_233 { color: #121212; }
.nh_color_234 { color: #1C1C1C; }
.nh_color_235 { color: #262626; }
.nh_color_236 { color: #303030; }
.nh_color_237 { color: #3A3A3A; }
.nh_color_238 { color: #444444; }
.nh_color_239 { color: #4E4E4E; }
.nh_color_240 { color: #585858; }
.nh_color_241 { color: #626262; }
.nh_color_242 { color: #6C6C6C; }
.nh_color_243 { color: #767676; }
.nh_color_244 { color: #808080; }
.nh_color_245 { color: #8A8A8A; }
.nh_color_246 { color: #949494; }
.nh_color_247 { color: #9E9E9E; }
.nh_color_248 { color: #A8A8A8; }
.nh_color_249 { color: #B2B2B2; }
.nh_color_250 { color: #BCBCBC; }
.nh_color_251 { color: #C6C6C6; }
.nh_color_252 { color: #D0D0D0; }
.nh_color_253 { color: #DADADA; }
.nh_color_254 { color: #E4E4E4; }
.nh_color_255 { color: #EEEEEE; }

/* Player position highlight (mimics terminal cursor on @) */
.nh_player {
  background-color: #00AA00;
}

